--- a/#sources/scss/ui.scss
+++ b/#sources/scss/ui.scss
@@ -22,7 +22,7 @@ body {
     }
 }
 
-button, a, label, .radio-box {
+button, a, label, .radio-box, .prod-preview__print {
     -webkit-tap-highlight-color: transparent;
 }
 
