--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -85,6 +85,10 @@
                 display: block;
             }
         }
+
+        &.hidden {
+            display: none;
+        }
     }
 }
 .frame-box {
@@ -147,7 +151,12 @@
         object-position: center;
         pointer-events: none;
         user-select: none;
-        transition: transform ease-in-out $animSpped;
+        transition: transform ease-in-out $animSpped, opacity ease-in-out $animSpped;
+        display: none;
+
+        &.active {
+            display: inline-block;
+        }
 
         #cloth-prod-color {
             transition: fill ease .2s;
@@ -155,6 +164,17 @@
 
         &-decor {
             fill: #333 !important;
+        }
+    }
+    &__roll {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
+        display: none;
+
+        &.active {
+            display: inline-block;
         }
     }
     // .prod-preview__print
@@ -169,6 +189,7 @@
         pointer-events: none;
         display: block;
         user-select: none;    
+        //opacity: 1;
 
         transition: opacity ease-in-out $animSpped, top ease-in-out $animSpped, width ease-in-out $animSpped, height ease-in-out $animSpped, transform ease-in-out $animSpped, background-color ease-in-out $animSpped;
 
@@ -179,6 +200,10 @@
             object-position: center;
 
             transition: width ease-in-out $animSpped, ;
+        }
+
+        &.active {
+            opacity: 1;
         }
     }
     &__pocket {
@@ -405,14 +430,26 @@
     ol {
         padding-left: 25px;
     }
-    li {
+    li, p {
         font-size: 18px;
+        line-height: 120%;
+        color: #777;
+    }
+    h3 {
+        font-size: 22px;
+        font-weight: 700;
         line-height: 120%;
         color: #777;
     }
 
     &.opened {
         display: flex;
+    }
+    &__pdf-label {
+        margin-top: 12px;
+        font-weight: 500;
+        color: #222;
+        display: none;
     }
 
     &__preview {
@@ -487,7 +524,34 @@
     }
 }
 
-.print-list, .size-list {
+#design:checked ~ #design-l {
+    background-color: #222;
+    color: #fff;
+
+    &::before {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    &::after {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+#custom:checked ~ #custom-l {
+    background-color: #222;
+    color: #fff;
+    
+    &::before {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    &::after {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.size-list {
     display: none;
     flex-wrap: wrap;
     gap: 22px;
@@ -506,6 +570,37 @@
         display: flex;
     }
 }
+.print-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22px;
+    @media (max-width: 991.98px) {
+        justify-content: center;
+    }
+
+
+    input {
+        display: none;
+    }
+}
+.prints {
+    display: none;
+    align-items: flex-start;
+    padding: 20px 0;
+    margin-top: 20px;
+    gap: 40px;
+    @media (max-width: 1200px) {
+        gap: calc(16px + (40 - 16) * ((100vw - 320px) / (1200 - 320)));
+    }
+    @media (max-width: 500px) {
+        flex-direction: column;
+    }
+
+    &.opened {
+        display: flex;
+    }
+}
+
 .radio-box {
     display: flex;
     flex-direction: column;
@@ -768,6 +863,19 @@
         transform: scale(1);
     }
 }
+#cust:checked ~ #cust-l {
+    background-color: #222;
+    color: #fff;
+
+    &::before {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    &::after {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 .radio-size-p_current {
     &::after {
         opacity: 1;
@@ -784,5 +892,184 @@
 .counter-price {
     font-size: 20px;
     font-weight: 700;
+
+}
+
+.categories {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    border-radius: 8px;
+    border: 1px solid #222;
+    width: 150px;
+    flex-shrink: 0;
+    @media (max-width: 500px) {
+        width: 100%;
+    } 
+
+    position: sticky;
+    top: 20px;
     
+    // .categories__category
+    &__category {
+        min-height: 40px;
+        display: flex;
+        @media (max-width: 500px) {
+            justify-content: center;
+        }
+        align-items: center;
+        padding: 12px 16px;
+        cursor: pointer;
+
+        transition: color ease-in-out $animSpped, background-color ease-in-out $animSpped, font-weight ease-in-out $animSpped;
+
+        font-size: 18px;
+        color: #222;
+        font-weight: 300;
+        &:not(:last-child) {
+            border-bottom: 1px solid #222;
+        }
+
+        &:hover {
+            background-color: rgba(34, 34, 34, 0.1);
+        }
+
+        // .categories__category_current
+        &_current {
+            font-weight: 500;
+            color: #fff;
+            background-color: #222;
+            pointer-events: none;
+
+            &:hover {
+                background-color: #222;
+            }
+        }
+    }
+}
+
+.order-box {
+    width: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+
+    // .order-box__preview
+    &__preview {
+        width: 100%;
+        height: 140px;
+        border-radius: 12px;
+        border: 1px solid #222;
+        padding: 8px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center;
+        }
+    }
+
+    &__title {
+        margin-top: 4px;
+        font-size: 16px;
+        font-weight: 700;
+        text-transform: capitalize;
+    }
+    &__size {
+        margin-bottom: 4px;
+    }
+}
+
+.enter-size-gallery {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+    gap: 12px;
+    
+    &.opened {
+        display: flex;
+    }
+
+    p {
+        font-size: 20px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    // .enter-size-gallery__demensions-row
+    &__demensions-row {
+        display: flex;
+        gap: 16px;
+        font-size: 18px;
+        line-height: 120%;
+    }
+    &__demensions {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__demensions-title {
+        font-weight: 700;
+    }
+
+    &__button {
+        margin-top: 10px;
+    }
+}
+
+.enter-size-pieces {
+    display: none;
+    padding-top: 30px;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+
+    &.opened {
+        display: flex;
+    }
+
+    p {
+        font-size: 20px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    // .enter-size-pieces__row
+    &__row {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        font-size: 18px;
+    }
+    // .enter-size-pieces__title
+    &__title {
+        font-weight: 700;
+    }
+    // .enter-size-pieces__width
+    &__width {
+    }
+    // .enter-size-pieces__height
+    &__height {
+    }
+    // .enter-size-pieces__button
+    &__button {
+        margin-top: 10px;
+    }
+}
+.counter {
+    // .counter__button
+    &__button {
+    }
+    // .counter__num
+    &__num {
+    }
+}
+.btn-minus {
+}
+.btn-plus {
+}
+.button {
 }
