--- a/#sources/scss/ui.scss
+++ b/#sources/scss/ui.scss
@@ -22,7 +22,7 @@ body {
     }
 }
 
-button, a, label, .radio-box, .prod-preview__print {
+button, a, label, .radio-box, .prod-preview__print, .radio-color {
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -48,6 +48,7 @@ main {
     align-items: center;
     font-size: 24px;
     font-weight: 700;
+    text-align: center;
     color: #222;
     min-height: 50px;
     transition: color ease-in-out $animSpped, background-color ease-in-out $animSpped, border ease-in-out $animSpped, transform ease .2s;
@@ -56,6 +57,8 @@ main {
     border: 1px solid #333;
     position: relative;
     overflow: hidden;
+
+    padding: 6px 20px;
 
     &:hover {
         background-color: #222;
