--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -412,6 +412,7 @@
 .dragndrop  {
     display: none;
     padding: 30px 0;
+    align-items: flex-start;
     gap: 48px;
 
     @media (max-width: 1200px) {
@@ -472,7 +473,7 @@
         }
     }
     &__area {
-        min-height: 240px;
+        min-height: 400px;
         flex-shrink: 0;
         padding: 32px 28px;
         width: 320px;
@@ -997,6 +998,7 @@
         font-size: 20px;
         font-weight: 500;
         text-align: center;
+        line-height: 120%;
     }
 
     // .enter-size-gallery__demensions-row
@@ -1034,6 +1036,7 @@
     p {
         font-size: 20px;
         font-weight: 500;
+        line-height: 120%;
         text-align: center;
     }
 
@@ -1058,18 +1061,4 @@
     &__button {
         margin-top: 10px;
     }
-}
-.counter {
-    // .counter__button
-    &__button {
-    }
-    // .counter__num
-    &__num {
-    }
-}
-.btn-minus {
-}
-.btn-plus {
-}
-.button {
 }
