--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -90,6 +90,19 @@
             display: none;
         }
     }
+
+    &__message-quantity {
+        display: none;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 30px;
+        font-size: 16px;
+        color: #777;
+
+        &.active {
+            display: block;
+        }
+    }
 }
 .frame-box {
     background-color: #fff;
