--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -740,9 +740,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 20px;
+        gap: 12px;
 
-        font-size: 22px;
+        font-size: 20px;
 
     }
     // .order-descr__title
@@ -830,10 +830,11 @@
 
 .counter-parent {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     width: auto;
-    align-items: center;
-    gap: 12px;
+    justify-content: center;
+    row-gap: 32px;
+    column-gap: 24px;
     margin-right: auto;
 }
 .counter {
@@ -902,6 +903,8 @@
     }
 }
 .radio-size-p_current {
+    pointer-events: none;
+
     &::after {
         opacity: 1;
     }
@@ -987,6 +990,15 @@
         border-radius: 12px;
         border: 1px solid #222;
         padding: 8px;
+        position: relative;
+        overflow: hidden;
+
+        &:hover {
+            .order-box__overlay {
+                opacity: 1;
+                pointer-events: all;
+            }
+        }
 
         img {
             width: 100%;
@@ -1004,6 +1016,59 @@
     }
     &__size {
         margin-bottom: 4px;
+    }
+
+    &__overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #60606099;
+        backdrop-filter: blur(5px);
+        border-radius: 11px;
+
+        opacity: 0;
+        pointer-events: none;
+
+        transition: opacity ease $animSpped;
+    }
+    &__rm-btn {
+        width: 36px;
+        height: 36px;
+        border-radius: 6px;
+        border: 2px solid #fff;
+        background-color: #A61515;
+
+        svg {
+            pointer-events: none;
+        }
+
+        transition: background-color ease-in-out 0.1s;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        path {
+            stroke: #fff;
+            transition: stroke ease-in-out 0.1s;
+        }
+
+        &:hover {
+            path {
+                stroke: #A61515;
+            }
+            background-color: #fff;
+        }
+
+        &:active {
+            background: #e3e3e3;
+        }
     }
 }
 
@@ -1075,12 +1140,7 @@
     &__title {
         font-weight: 700;
     }
-    // .enter-size-pieces__width
-    &__width {
-    }
-    // .enter-size-pieces__height
-    &__height {
-    }
+
     // .enter-size-pieces__button
     &__button {
         margin-top: 10px;
