--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -1251,3 +1251,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .counter__num {
     pointer-events: all !important;
 }
+
+.enter-size-warn {
+    color: #A61515;
+}
