--- a/css/style.css
+++ b/css/style.css
@@ -1624,3 +1624,7 @@ input[type=number]::-webkit-inner-spin-button {
 .counter__num {
   pointer-events: all !important;
 }
+
+.enter-size-warn {
+  color: #A61515;
+}
