--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -1255,3 +1255,11 @@ input[type="number"]::-webkit-inner-spin-button {
 .enter-size-warn {
     color: #A61515;
 }
+.enter-size-gallery, .enter-size-pieces {
+    // .enter-size-gallery__preview-price
+    &__preview-price {
+        margin: 20px 0;
+        font-size: 20px;
+        font-weight: 700;
+    }
+}
