--- a/css/style.css
+++ b/css/style.css
@@ -1628,3 +1628,9 @@ input[type=number]::-webkit-inner-spin-button {
 .enter-size-warn {
   color: #A61515;
 }
+
+.enter-size-gallery__preview-price, .enter-size-pieces__preview-price {
+  margin: 20px 0;
+  font-size: 20px;
+  font-weight: 700;
+}
