--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -1263,3 +1263,37 @@ input[type="number"]::-webkit-inner-spin-button {
         font-weight: 700;
     }
 }
+
+.demo-table {
+    width: 100%;
+    border-collapse: collapse;
+
+    // .demo-table__title
+    &__title {
+        text-align: left !important;
+        font-weight: 700;
+        background-color: #ccc;
+    }
+
+    table, th, td {
+        border: 1px solid black;
+    }
+
+    td {
+        padding: 6px 12px;
+        text-align: center;
+        font-size: 18px;
+        @media (max-width: 480px) {
+            padding: 6px;
+            font-size: 14px;
+        }
+    }
+
+    tr {
+        &:first-child {
+            td {
+                font-weight: 700;
+            }
+        }
+    }
+}
